--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         - 30001
     ports:
       - 30001:30001
-    command: mongod --replSet rsmongo --bind_ip mongo_rs1 --port 30001
+    command: mongod --replSet rsmongo --bind_ip_all --port 30001
   mongo_rs2:
     image: mongo:6
     restart: always
@@ -32,7 +32,7 @@ services:
         - 30002
     ports:
       - 30002:30002
-    command: mongod --replSet rsmongo --bind_ip mongo_rs2 --port 30002
+    command: mongod --replSet rsmongo --bind_ip_all --port 30002
   mongo_rs3:
     image: mongo:6
     restart: always
@@ -46,7 +46,7 @@ services:
         - 30003
     ports:
       - 30003:30003
-    command: mongod --replSet rsmongo --bind_ip mongo_rs3 --port 30003
+    command: mongod --replSet rsmongo --bind_ip_all --port 30003
   mongo_host:
     build: "./main-replica"
     container_name: mongo_host
